# Dagster-Data-Pipeline-For-Political-

./: .env.example  .gitignore  Dockerfile.dagster-base  MASTER_TABLES_README.md  Makefile  README.md  manual_download.py  package-lock.json  package.json  pyproject.toml  test_sample.py  test_sql_patterns.py  test_typos.py
.tmp_dagster_home_30hoptyl/history/: runs.db
.tmp_dagster_home_30hoptyl/history/runs/: index.db
.tmp_dagster_home_30hoptyl/schedules/: schedules.db
contributions_pipeline/: definitions.py  resources.py
contributions_pipeline/benchmark_contributors_evaluation/: IMPLEMENTATION_SUMMARY.md  README.md  assets.py  definitions.py  ground_truth_template.csv  populate_state_mapping.sql
contributions_pipeline/ingestion/: assets.py  definitions.py
contributions_pipeline/ingestion/federal/: assets.py  definitions.py  test_assets.py
contributions_pipeline/lib/: dates.py  fetch.py  file.py  ingest.py  iter.py  number.py  schedule.py  test_ingest.py
contributions_pipeline/move_to_application_db/: assets.py  definitions.py
contributions_pipeline/reports/: assets.py  definitions.py
contributions_pipeline/transformation/: assets.py  definitions.py  resource.py
contributions_pipeline/transformation/dbt_transformations/: .gitignore  README.md  dbt_project.yml  profiles.yml
prisma/: schema.prisma
prisma/migrations/20240317000001_add_individual_contribution_landing_table/: migration.sql
prisma/migrations/20240317000002_add_committee_master_landing_table/: migration.sql
prisma/migrations/20240317000003_add_candidate_master_landing_table/: migration.sql
prisma/migrations/20240317000004_remove_pk_on_federal_landing/: migration.sql
prisma/migrations/20250320044939_add_virginia_commitee_landing_table/: migration.sql
prisma/migrations/20250320045053_add_individual_contribution_landing_table/: migration.sql
prisma/migrations/20250321024921_add_va_transitional_landing_table/: migration.sql
prisma/migrations/20250326024808_add_ca_landing_table/: migration.sql
prisma/migrations/20250329025518_add_master_table/: migration.sql
supabase/: config.toml
(+380 files in other folders)
